--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
 
+./MDEVSP_dataset/*.csv
+./MDEVSP_dataset/*.bin
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 code_juliette/*
