--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode
 
+/venv_mdevsp/*
 /MDEVSP_dataset/*.csv
 /MDEVSP_dataset/**/*.bin
+/Networks/**/inequalities_predictions.csv
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
